# django-comptes

./: .coverage  .coveragerc  .pre-commit-config.yaml  .travis.yml  .yapfignore  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  README.rst  admin.py  manage.py  models.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  test_requirements.in  test_requirements.txt  urls.py  views.py
.github/workflows/: lint.yml  test.yml
comptes/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
comptes/migrations/: 0001_initial.py  0002_auto_20150517_2022.py  0003_ordre.py  0004_auto_20150921_1254.py  0005_add_date_time_fields.py  0006_moment_to_date_time.py  0007_suppression_moment.py  0008_add_date_time_fields_again.py  0009_moment_to_date_time_again.py  0010_suppression_moment_again.py  0011_scribe.py  0012_cree_modifie.py  0013_verbose_name.py  0014_auto_20180106_2054.py  0015_auto_20180106_2055.py  0016_remove_occasion_nom.py  0017_auto_20180106_2110.py  0018_auto_20180106_2111.py  0019_auto_20180106_2130.py  0020_auto_20180106_2130.py  0021_auto_20180106_2144.py
docs/: release.sh
migrations/: 0001_initial.py  0002_auto_20150517_2022.py  0003_ordre.py  0005_add_date_time_fields.py  0006_moment_to_date_time.py  0011_scribe.py
project_for_tests/: comptes
project_for_tests/project_for_tests/: settings.py  urls.py  wsgi.py
templates/comptes/: comptes.html  dette_form.html  occasions.html  remboursement_form.html
test_comptes/: settings.py  tests.py  urls.py  wsgi.py
testproject/: __init__.py  settings.py  tests.py  urls.py
testproject/templates/: base.html
(+8 files in other folders)
